# jetpack

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  doc.txt
assets/: basic.map
client/: CMakeLists.txt
client/include/: input_manager.hpp  player_actions.hpp  window_manager.hpp
client/src/: main.cpp
common/: CMakeLists.txt
common/include/common/: packet_structs.hpp  packet_type.hpp  vec2.hpp
network_lib/: CMakeLists.txt
network_lib/include/network/: protocol.hpp  tcp_client_connection.hpp  tcp_server.hpp  tcp_server_connection.hpp  tcp_socket.hpp
server/: CMakeLists.txt
server/include/: game_logic.hpp  game_map.hpp  game_server.hpp  game_state.hpp  packet_dispatcher.hpp
server/src/: main.cpp
